--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
   <link rel="stylesheet" href="./headerfooter.css">
   <link rel="stylesheet" href="css/stylesheet.css">
 </head>
@@ -83,9 +85,96 @@
           Layanan kami sebagai Pengembang iOS bertanggung jawab untuk mengembangkan aplikasi untuk perangkat seluler yang diberdayakan oleh sistem operasi iOS Apple. Idealnya, pengembang iOS yang baik mahir dengan salah satu dari dua bahasa pemrograman untuk platform ini: Objective-C atau Swift. Mereka juga harus memiliki pemahaman yang kuat tentang pola dan praktik yang berputar di sekitar platform iOS.</p>
       </div>
     </div>
-
-
   </section>
+  <section>
+    <div class="container" id="about-us">
+      <div class="row d-block  mb-3 pb-2 pt-3">
+        <h1 class="why-st mt-5">Our Projects</h1>
+        <div class="col-12">
+          <a href="projects.html" class="details-st p-3 mb-0">
+            view more <i class="fas fa-arrow-right ml-2"></i>
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+  
+  <section>
+    <div class="container mt-0">
+      <div class="row pb-5">
+        <div class="col-sm-4 col-11 mx-auto mb-4 ">
+          <div class="card">
+            <a href="http://www.unitedtractors.com/id">
+              <div class="thumbnail-st">
+              </div>
+              <img src="./img/united.jpg" class="card-img-top img-fluid" alt="...">
+            </a>
+            <div class="card-body">
+            <a href="">
+              <h1>PT United Tractors</h1>
+            </a>
+            <p class="pemateri">Designed By: <br><span>Santi Rahayu</span></p>
+            <p class="cv-pemateri"></p>
+            <hr>
+            <div class="d-flex justify-content-center pl-2 pr-2">
+              <h5 class="m-1"><span class="badge keterangan1">HTML,CSS</span></h5>
+              <h5 class="m-1"><span class="badge keterangan2">JAVASCRIPT</span></h5>
+              <h5 class="m-1"><span class="badge keterangan3">BOOTSTRAP</span></h5>
+            </div>
+            <a href="http://www.unitedtractors.com/id" class="btn btn-general-st btn-block mt-2">Visit</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4 col-11 mx-auto mb-4">
+        <div class="card">
+          <a href="https://covid19.go.id/">
+            <div class="thumbnail-st">
+            </div>
+            <img src="./img/covid1.jpg" class="card-img-top img-fluid" alt="...">
+          </a>
+          <div class="card-body">
+            <a href="">
+              <h1>COVID-19</h1>
+            </a>
+            <p class="pemateri">Designed By:<br><span>Sardi Irfansyah</span></p>
+            <p class="cv-pemateri"></p>
+            <hr>
+            <div class="d-flex justify-content-center pl-2 pr-2">
+              <h5 class="m-1"><span class="badge keterangan1">HTML,CSS</span></h5>
+              <h5 class="m-1"><span class="badge keterangan2">JAVASCRIPT</span></h5>
+              <h5 class="m-1"><span class="badge keterangan3">BOOTSTRAP</span></h5>
+            </div>
+            <a href="https://covid19.go.id/" class="btn btn-general-st btn-block mt-2">Visit</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4 col-11 mx-auto mb-4">
+        <div class="card">
+          <a href="https://inovasi.co.id/">
+            <div class="thumbnail-st">
+            </div>
+            <img src="./img/invoasi.jpg" class="card-img-top img-fluid" alt="...">
+          </a>
+          <div class="card-body">
+            <a href="">
+              <h1>PT Next Inovation</h1>
+            </a>
+            <p class="pemateri">Designed By: <br><span>Heri Wahyudianto </span></p>
+            <p class="cv-pemateri"></p>
+            <hr>
+            <div class="d-flex justify-content-center pl-2 pr-2">
+              <h5 class="m-1"><span class="badge keterangan1">HTML,CSS</span></h5>
+              <h5 class="m-1"><span class="badge keterangan2">JAVASCRIPT, PHP</span></h5>
+              <h5 class="m-1"><span class="badge keterangan3">BOOTSTRAP</span></h5>
+            </div>
+            <a href="https://inovasi.co.id/" class="btn btn-general-st btn-block mt-2">Visit</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div>
+  </section>
+  
   <footer>
     <div class="flex flex-wrap justify-between max-width-4 mx-auto p2">
       <div class="col sm-col-6 md-col-3 lg-col-3">
